--- a/app/src/main/res/drawable/button_states.xml
+++ b/app/src/main/res/drawable/button_states.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_pressed="true" android:drawable="@drawable/button_selected"/>
     <item android:state_focused="true" android:drawable="@drawable/button_selected"/>
+    <item android:state_enabled="false" android:drawable="@drawable/skip_button_disabled"/>
     <item android:drawable="@drawable/my_button"/>
 </selector>
