--- a/app/src/main/res/layout/activity_balancing.xml
+++ b/app/src/main/res/layout/activity_balancing.xml
@@ -1,50 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="bottom"
 
-    <ImageView
-        android:id="@+id/appIcon"
-        android:adjustViewBounds="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_height="150dp"
+    android:fillViewport="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical" >
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_gravity="top"
-        android:scaleType="fitXY"
-        android:src="@drawable/main"/>
+        android:layout_height="match_parent"
+        android:background="@drawable/color_background_balancing"
+        android:fitsSystemWindows="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        >
 
-    <TextView android:text="Activity 2" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/act_2"
-        android:textSize="25dp"
-        android:layout_marginTop="150dp"
-        android:layout_below="@id/appIcon"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
-    <TextView android:text="Balancing" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/title_2"
-        android:textSize="25dp"
-        android:layout_below="@+id/act_2"
-        android:layout_toLeftOf="@+id/button3"
-        android:layout_toStartOf="@+id/button3" />
+        <ImageView
+            android:id="@+id/appIcon"
+            android:adjustViewBounds="true"
+            android:layout_height="150dp"
+            android:layout_width="match_parent"
+            android:layout_gravity="top"
+            android:scaleType="fitXY"
+            android:src="@drawable/main_background"
+            />
 
-    <TextView android:text="Eye open right foot" android:layout_width="wrap_content"
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/balancing_border"
+            android:text="Ask the child to fold his/her arms across the chest and stand on each foot alternately. Count the seconds for bothe feet: both eyes open and both eyes closed  "
+            android:textSize="25dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/textact2"
+            android:textColorHighlight="#E0E0E0"
+            android:textColorHint="#00CD66"
+            android:textColor="#E0E0E0"
+            android:fontFamily="sans-serif"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/title_2"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:textStyle="italic"
+            />
+
+
+        <TextView android:text="Balance" android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_2"
+            android:textSize="50dp"
+            android:textColor="#F0F0F0"
+            android:fontFamily="sans-serif"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/appIcon"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageViewbalancing"
+            android:adjustViewBounds="true"
+            android:layout_gravity="top"
+            android:scaleType="fitXY"
+            android:src="@drawable/balance"
+
+            android:layout_above="@+id/textact2"
+            android:layout_alignRight="@+id/textact2"
+            android:layout_alignEnd="@+id/textact2"
+            android:layout_below="@+id/appIcon"
+            android:layout_alignLeft="@+id/button3"
+            android:layout_alignStart="@+id/button3" />
+
+
+
+        <TextView android:text="Eye open right foot" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/opr"
-        android:textSize="20dp"
+        android:textSize="35dp"
         android:layout_marginTop="30dp"
+        android:textColor="#F0F0F0"
+        android:layout_below="@+id/textact2"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginLeft="30dp"
+        />
 
     <TextView android:text="Eye open left foot" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/opl"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/button3"
+        android:textSize="35dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/opr"
+        android:textColor="#F0F0F0"
+        android:layout_marginLeft="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -52,9 +102,11 @@
     <TextView android:text="Eye close right foot" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/clr"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/button7"
+        android:textSize="35dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/opl"
+        android:textColor="#F0F0F0"
+        android:layout_marginLeft="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -62,153 +114,248 @@
     <TextView android:text="Eye close left foot" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cll"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/button9"
+        android:textSize="35dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/clr"
+        android:textColor="#F0F0F0"
+        android:layout_marginLeft="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Next Activity"
-        android:id="@+id/button1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/button11"
-        android:layout_alignStart="@+id/button11"
-        android:onClick="nextactivity_skipping"/>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Start"
-        android:onClick="start_first_clock"
-        android:id="@+id/button3"
-        android:layout_alignTop="@+id/opr"
-        android:layout_toRightOf="@+id/act_2"
-        android:layout_toEndOf="@+id/act_2" />
+        <Chronometer
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chronometer"
+            android:layout_below="@id/textact2"
+            android:layout_marginTop="35dp"
+            android:layout_marginLeft="340dp"
+            android:textSize="30dp"
+            android:textColor="#F0F0F0"
+            android:format="00:00:00"
+             />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Start"
+            android:onClick="start_first_clock"
+            android:id="@+id/button3"
+            android:layout_marginTop="27dp"
+            android:layout_below="@+id/textact2"
+            android:textColor="#F0F0F0"
+            android:layout_marginLeft="480dp"
+            android:background="@drawable/chronometer_button_states"
+            />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="50dp"
         android:text="Stop"
         android:id="@+id/button6"
-        android:layout_alignTop="@+id/button3"
-        android:layout_toRightOf="@+id/button3"
-        android:layout_toEndOf="@+id/button3" />
+        android:layout_marginTop="27dp"
+        android:layout_below="@+id/textact2"
+        android:textColor="#F0F0F0"
+        android:layout_marginLeft="530dp"
+        android:background="@drawable/chronometer_button_states"
+         />
 
-    <Button
+        <Chronometer
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chronometer2"
+            android:textSize="30dp"
+            android:textColor="#F0F0F0"
+            android:layout_above="@+id/button9"
+            android:layout_alignLeft="@+id/chronometer"
+            android:layout_alignStart="@+id/chronometer" />
+
+
+        <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="50dp"
         android:text="Start"
         android:id="@+id/button7"
-        android:layout_alignTop="@+id/opl"
-        android:layout_toRightOf="@+id/act_2"
-        android:layout_toEndOf="@+id/act_2" />
+        android:layout_marginTop="23dp"
+        android:layout_below="@+id/button3"
+            android:textColor="#F0F0F0"
+            android:layout_marginLeft="480dp"
+            android:background="@drawable/chronometer_button_states"
+
+            />
+
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="50dp"
         android:text="Stop"
         android:id="@+id/button8"
-        android:layout_alignTop="@+id/button7"
-        android:layout_toRightOf="@+id/button3"
-        android:layout_toEndOf="@+id/button3" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Start"
-        android:id="@+id/button9"
-        android:layout_alignTop="@+id/clr"
-        android:layout_toRightOf="@+id/title_2"
-        android:layout_toEndOf="@+id/title_2" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Stop"
-        android:id="@+id/button10"
-        android:layout_alignTop="@+id/button9"
-        android:layout_toRightOf="@+id/button7"
-        android:layout_toEndOf="@+id/button7" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Start"
-        android:id="@+id/button11"
-        android:layout_alignTop="@+id/cll"
-        android:layout_alignLeft="@+id/button9"
-        android:layout_alignStart="@+id/button9" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Stop"
-        android:id="@+id/button12"
-        android:layout_alignTop="@+id/button11"
-        android:layout_toRightOf="@+id/button11"
-        android:layout_toEndOf="@+id/button11" />
-
-    <Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chronometer"
-
-        android:layout_alignTop="@+id/button3"
-        android:layout_toLeftOf="@+id/button3"
-        android:layout_marginRight="25dp"
-        android:layout_toStartOf="@+id/button3" />
-
-    <Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chronometer2"
-
-        android:layout_marginRight="25dp"
-        android:layout_alignTop="@+id/opl"
-        android:layout_alignLeft="@+id/chronometer"
-        android:layout_alignStart="@+id/chronometer" />
-
-    <Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chronometer3"
-        android:layout_marginRight="25dp"
-        android:layout_alignTop="@+id/button9"
-        android:layout_toLeftOf="@+id/button9"
-        android:layout_toStartOf="@+id/button9" />
-
-    <Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chronometer4"
-        android:layout_toLeftOf="@+id/button11"
-        android:layout_marginRight="25dp"
-        android:layout_alignTop="@+id/cll" />
+        android:layout_marginTop="23dp"
+        android:layout_below="@+id/button6"
+        android:textColor="#F0F0F0"
+        android:layout_marginLeft="530dp"
+        android:background="@drawable/chronometer_button_states"
+        />
 
 
-</RelativeLayout>
+
+        <Chronometer
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chronometer3"
+            android:textSize="30dp"
+            android:textColor="#F0F0F0"
+            android:layout_alignBottom="@+id/clr"
+            android:layout_alignLeft="@+id/chronometer2"
+            android:layout_alignStart="@+id/chronometer2" />
+
+
+
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Start"
+            android:id="@+id/button9"
+            android:layout_marginTop="23dp"
+            android:layout_below="@+id/button7"
+            android:textColor="#F0F0F0"
+            android:layout_marginLeft="480dp"
+            android:background="@drawable/chronometer_button_states"
+
+            />
+
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Stop"
+            android:id="@+id/button10"
+            android:layout_marginTop="23dp"
+            android:layout_below="@+id/button8"
+            android:textColor="#F0F0F0"
+            android:layout_marginLeft="530dp"
+            android:background="@drawable/chronometer_button_states"
+            />
+
+
+
+        <Chronometer
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chronometer4"
+            android:textSize="30dp"
+            android:textColor="#F0F0F0"
+            android:layout_alignBottom="@+id/cll"
+            android:layout_alignLeft="@+id/chronometer3"
+            android:layout_alignStart="@+id/chronometer3" />
+
+
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Start"
+            android:id="@+id/button11"
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/button9"
+            android:textColor="#F0F0F0"
+            android:layout_marginLeft="480dp"
+            android:background="@drawable/chronometer_button_states"
+
+            />
+
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Stop"
+            android:id="@+id/button12"
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/button10"
+            android:textColor="#F0F0F0"
+            android:layout_marginLeft="530dp"
+            android:background="@drawable/chronometer_button_states"
+            />
+
+
+        <Button
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:text="NEXT"
+            android:background="@drawable/button_states"
+            android:id="@+id/button1"
+            android:onClick="nextactivity_skipping"
+            android:focusable="true"
+            android:textColor="#E0E0E0"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:textSize="40dp"
+            android:layout_alignTop="@+id/buttonkskip"
+            android:layout_toRightOf="@+id/chronometer"
+            android:layout_toEndOf="@+id/chronometer" />
+
+
+        <Button
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:text="HOME"
+            android:background="@drawable/button_states"
+            android:id="@+id/user_cancel"
+            android:focusable="true"
+            android:textColor="#E0E0E0"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:textSize="40dp"
+            android:onClick="cancelRegistration"
+            android:layout_below="@+id/cll"
+            android:layout_marginTop="130dp"
+            android:layout_alignLeft="@+id/textact2"
+            android:layout_alignStart="@+id/textact2" />
+
+        <Button
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:text="PREV"
+            android:background="@drawable/button_states"
+            android:id="@+id/buttonprev"
+            android:onClick="prevactivity_eyetracking"
+            android:focusable="true"
+            android:textColor="#E0E0E0"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:textSize="40dp"
+            android:layout_marginLeft="160dp"
+            android:layout_alignTop="@+id/user_cancel"
+             />
+
+
+        <Button
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:text="SKIP"
+            android:background="@drawable/button_states"
+            android:id="@+id/buttonkskip"
+            android:focusable="true"
+            android:textColor="#E0E0E0"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:textSize="40dp"
+            android:layout_marginLeft="305dp"
+            android:layout_alignTop="@+id/buttonprev"
+             />
+
+
+
+    </RelativeLayout>
+    </ScrollView>
