--- a/app/src/main/res/layout/activity_skipping.xml
+++ b/app/src/main/res/layout/activity_skipping.xml
@@ -1,85 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="bottom"
+
+    android:fillViewport="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/color_background_skipping"
+    android:fitsSystemWindows="true"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    >
+
 
     <ImageView
         android:id="@+id/appIcon"
         android:adjustViewBounds="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_height="150dp"
         android:layout_width="match_parent"
         android:layout_gravity="top"
         android:scaleType="fitXY"
-        android:src="@drawable/main"/>
-
-    <TextView android:text="Activity 3" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/act_3"
-        android:textSize="25dp"
-        android:layout_marginTop="150dp"
-        android:layout_below="@id/appIcon"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:src="@drawable/main_background"
+        />
 
     <TextView android:text="Skipping" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/title_3"
+        android:textSize="50dp"
+        android:textColor="#F0F0F0"
+        android:fontFamily="sans-serif"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/appIcon"
+        android:layout_centerHorizontal="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewskipping"
+        android:adjustViewBounds="true"
+        android:layout_gravity="top"
+        android:scaleType="fitXY"
+        android:src="@drawable/skipping"
+
+        android:layout_above="@+id/textact3"
+        android:layout_alignRight="@+id/textact3"
+        android:layout_alignEnd="@+id/textact3"
+        android:layout_below="@+id/appIcon"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_alignStart="@+id/button1" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/balancing_skipping"
+        android:text="Have the chold skip to the end of hall - 20 feet and come back. If not sure, repeat this step"
         android:textSize="25dp"
-        android:layout_below="@+id/act_3"/>
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textact3"
+        android:textColorHighlight="#EEEE00"
+        android:textColorHint="#EEEE00"
+        android:textColor="#E0E0E0"
+        android:fontFamily="sans-serif"
+        android:layout_marginTop="10dp"
+
+        android:textStyle="italic"
+        android:layout_below="@+id/title_3"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        />
+
+    <TextView android:text="Skipping" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/skipping"
+        android:textStyle="bold"
+        android:layout_below="@id/textact3"
+        android:textSize="30dp"
+        android:textColor="#F0F0F0"
+        android:layout_marginTop="15dp"
+
+        android:layout_marginLeft="40dp"/>
 
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="90dp"
         android:weightSum="3"
-        android:id="@+id/rgrp1"
-        android:layout_below="@id/title_3"
-        android:orientation="horizontal">
+        android:id="@+id/rgrpskipping1"
+
+        android:orientation="horizontal"
+        android:layout_below="@+id/skipping"
+        android:layout_marginLeft="40dp">
+
+        <RadioButton
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:id="@+id/radiobutton1"
+        android:text="yes"
+        android:textColor="#F0F0F0"
+        android:textSize="30dp"
+        android:checked="false"/>
         <RadioButton
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:id="@+id/radiobutton1"
-            android:text="yes"/>
-        <RadioButton
-            android:layout_width="0dp"
-            android:layout_weight=".75"
-            android:layout_height="wrap_content"
-
-            android:text="gallop"
             android:id="@+id/radiobutton2"
-            android:checked="false" />
+            android:text="gallop"
+            android:textColor="#F0F0F0"
+            android:textSize="30dp"
+            android:checked="false"/>
         <RadioButton
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/radiobutton3"
-            android:text="mixed"/>
+            android:text="mixed"
+            android:textColor="#F0F0F0"
+            android:textSize="30dp"
+            android:checked="false"/>
     </RadioGroup>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Next Activity"
-        android:id="@+id/button1"
-        android:onClick="nextactivity_comments"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/act_3"
-        android:layout_toEndOf="@+id/act_3" />
+
 
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="100dp"
+        android:layout_width="135dp"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        android:onClick="saveskippingdetails"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="HOME"
+        android:background="@drawable/button_states"
+        android:id="@+id/user_cancel"
+        android:focusable="true"
+        android:textColor="#E0E0E0"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:onClick="cancelRegistration"
+        android:layout_below="@+id/rgrpskipping1"
+        android:layout_marginTop="310dp"
+        android:layout_alignLeft="@+id/textact3"
+        android:layout_alignStart="@+id/textact3" />
+
+    <Button
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:text="PREV"
+        android:background="@drawable/button_states"
+        android:id="@+id/buttonprev"
+        android:onClick="prevactivity_balancing"
+        android:focusable="true"
+        android:textColor="#E0E0E0"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:layout_marginLeft="160dp"
+        android:layout_alignTop="@+id/user_cancel"
+        />
+
+
+    <Button
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:text="SKIP"
+        android:background="@drawable/button_states"
+        android:id="@+id/buttonkskip"
+        android:focusable="true"
+        android:textColor="#E0E0E0"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:layout_marginLeft="305dp"
+        android:layout_alignTop="@+id/buttonprev"
+        />
+
+
+    <Button
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:text="NEXT"
+        android:background="@drawable/button_states"
+        android:id="@+id/button1"
+        android:onClick="nextactivity_teaming"
+        android:focusable="true"
+        android:textColor="#E0E0E0"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:layout_alignTop="@+id/buttonkskip"
+        android:layout_alignRight="@+id/textact3"
+        android:layout_alignEnd="@+id/textact3" />
+
+
+
 
 
 
@@ -87,3 +200,4 @@
 
 
 </RelativeLayout>
+    </ScrollView>
