--- a/app/src/main/res/layout/activity_student_registration.xml
+++ b/app/src/main/res/layout/activity_student_registration.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="bottom"
-
     android:fillViewport="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
@@ -15,6 +14,7 @@
     android:layout_height="fill_parent"
     android:background="@drawable/color_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:fitsSystemWindows="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/user_cname"
         android:hint="@string/hint3"
-        android:singleLine="true"
+        android:singleLine="false"
         android:imeOptions="actionNext"
         android:focusable="true"
         android:nextFocusForward="@+id/user_tname"
@@ -55,7 +55,9 @@
         android:fontFamily="sans-serif"
         android:layout_below="@+id/register"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="50dp"
+        android:scrollHorizontally="false"
+        android:ellipsize="none"/>
 
 
     <EditText
@@ -63,7 +65,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/user_tname"
         android:hint="@string/hint4"
-        android:singleLine="true"
+        android:singleLine="false"
         android:imeOptions="actionNext"
         android:focusable="true"
         android:nextFocusForward="@+id/user_age"
@@ -95,7 +97,9 @@
         android:fontFamily="sans-serif"
         android:layout_below="@+id/user_tname"
         android:layout_alignLeft="@+id/user_cname"
-        android:layout_alignStart="@+id/user_cname"/>
+        android:layout_alignStart="@+id/user_cname"
+        android:layout_alignRight="@+id/register"
+        android:layout_alignEnd="@+id/register" />
 
 
     <EditText
@@ -234,7 +238,7 @@
     <Button
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:text="CANCEL"
+        android:text="HOME"
         android:background="@drawable/button_states"
         android:id="@+id/user_cancel"
         android:focusable="true"
@@ -251,7 +255,7 @@
     <Button
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:text="RESET"
+        android:text="CLEAR"
         android:background="@drawable/button_states"
         android:id="@+id/user_reset"
         android:focusable="true"
@@ -259,7 +263,6 @@
         android:textStyle="bold"
         android:padding="10dp"
         android:textSize="40dp"
-        android:onClick="resetForm"
         android:layout_marginTop="40dp"
         android:layout_below="@+id/user_grade"
         android:layout_toRightOf="@+id/user_cancel"
