--- a/app/src/main/res/layout/row_listview.xml
+++ b/app/src/main/res/layout/row_listview.xml
@@ -1,20 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
+
+    <TextView
+        android:id="@+id/Slno"
+        android:layout_width="73dp"
+        android:layout_height="55dp"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:paddingLeft="10dp"
+        android:singleLine="false"
+        android:text=""
+
+        android:background="@drawable/listview_row_selected"/>
+
+    <TextView
+        android:id="@+id/one"
+        android:layout_width="196dp"
+        android:layout_height="55dp"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:paddingLeft="2dp"
+        android:singleLine="false"
+        android:text=""
+        android:background="@drawable/listview_row_selected"/>
+
+    <TextView
+        android:id="@+id/two"
+        android:layout_width="206dp"
+        android:layout_height="55dp"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:paddingLeft="5dp"
+        android:singleLine="false"
+        android:text=""
+    android:background="@drawable/listview_row_selected"/>
+
+    <TextView
+        android:id="@+id/three"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:paddingLeft="5dp"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:singleLine="false"
+        android:text=""
+        android:background="@drawable/listview_row_selected"/>
+
+    <TextView
+        android:id="@+id/hiddenid"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:textColor="@android:color/white"
+        android:layout_weight="0"
+        android:visibility="gone"
+        android:text="" />
+
+</LinearLayout>
+
+<!--<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <TextView
         android:id="@+id/studid"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_width="0dp"
         android:layout_weight="1"
 
-        android:text="ID"/>
+        android:text="No."/>
 
     <TextView
         android:id="@+id/studname"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_width="0dp"
         android:layout_weight="2"
 
@@ -22,18 +84,17 @@
 
     <TextView
         android:id="@+id/studschool"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_width="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="2"
         android:text="School"/>
 
     <TextView
         android:id="@+id/studgrade"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:text="Grade"/>
 
+</LinearLayout> -->
 
-
-</LinearLayout>
