--- a/app/src/main/res/layout/activity_balancing.xml
+++ b/app/src/main/res/layout/activity_balancing.xml
@@ -25,7 +25,7 @@
             android:layout_width="150dp"
             android:layout_gravity="top"
             android:scaleType="fitXY"
-            android:src="@drawable/balance"
+            android:src="@drawable/balancenew"
             android:layout_centerHorizontal="true"
             android:paddingTop="10dp"/>
 
