--- a/app/src/main/res/layout/activity_crawling.xml
+++ b/app/src/main/res/layout/activity_crawling.xml
@@ -25,7 +25,7 @@
         android:layout_width="150dp"
         android:layout_gravity="top"
         android:scaleType="fitXY"
-        android:src="@drawable/crawling"
+        android:src="@drawable/crawlingnew"
         android:layout_centerHorizontal="true"
         android:paddingTop="10dp"/>
     <TextView
