--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -273,7 +273,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/imageView"
-            android:background="@drawable/trackingball"
+            android:background="@drawable/trackingnew"
             android:layout_below="@+id/appName"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="140dp"
@@ -282,7 +282,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/imageView2"
-            android:background="@drawable/balance"
+            android:background="@drawable/balancenew"
             android:layout_below="@+id/appName"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="250dp"
@@ -293,7 +293,7 @@
             android:layout_height="100dp"
             android:id="@+id/imageView3"
             android:layout_marginTop="10dp"
-            android:background="@drawable/skipping"
+            android:background="@drawable/skippingnew"
             android:layout_below="@id/imageView2"
             android:layout_alignLeft="@id/imageView2"
             android:layout_alignStart="@id/imageView2"/>
@@ -301,7 +301,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/imageView4"
-            android:background="@drawable/teaming"
+            android:background="@drawable/teamingnew"
             android:layout_below="@id/imageView"
             android:layout_marginTop="10dp"
             android:layout_alignStart="@id/imageView"
@@ -310,7 +310,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/imageView5"
-            android:background="@drawable/crawling"
+            android:background="@drawable/crawlingnew"
             android:layout_below="@+id/appName"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="360dp"
